2002-03-05  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.cpp (LoadVariable): Fix bug 2728.
	(EmitStatement): Fix bug 2729.
	(ProcessAbruptExit): Fix bug 2731.
	* src/bytecode.h (FindInteger): Fix bug 2730.

2002-02-26  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.cpp (ProcessAbruptExit): Fix bug 2713.

2002-02-25  Eric Blake  <ebb9@email.byu.edu>

	* src/double.cpp (operator>, operator<): Fix bug 2700.

2002-02-25  Eric Blake  <ebb9@email.byu.edu>

	* src/init.cpp (ProcessVariableInitializer): Fix bug 2702.

2002-02-25  Eric Blake  <ebb9@email.byu.edu>

	* src/semantic.h (DefiniteLoopBody): Update signature.
	* src/definite.cpp (DefiniteLoopBody, DefiniteWhileStatement),
	(DefiniteForStatement, DefiniteDoStatement): Fix loop semantics
	for definite unassignment - bug 2675, patch 265.

2002-02-21  Eric Blake  <ebb9@email.byu.edu>

	* src/expr.cpp (ProcessMethodInvocation): Check for void
	arguments.
	(ProcessNOT_EQUAL, ProcessEQUAL_EQUAL): 
	* src/error.cpp:
	* src/error.h (VOID_TYPE_IN_EQUALITY_EXPRESSION): Use TYPE_IS_VOID
	instead.

2002-02-20  Eric Blake  <ebb9@email.byu.edu>

	* src/jikesapi.cpp (DefaultFileReader): Silence a warning.
	* src/bytecode.cpp (GenerateClassAccessMethod): Use exception
	chaining for class literals when -source == 1.4.
	* src/control.cpp: 
	* src/control.h (Throwable_initCauseMethod),
	(NoClassDefFoundError_InitStringMethod): Add methods.
	* src/platform.cpp:
	* src/platform.h (US_initCause, U8S_LP_Throwable_RP_Throwable):
	Add fields. Also, shorten names of other long fields.
	* src/set.h:
	* src/system.cpp: Reformat code.

2002-02-20  Eric Blake  <ebb9@email.byu.edu>

	* src/error.cpp (PrintNEGATIVE_ARRAY_SIZE):
	* src/error.h:
	* src/expr.cpp (ProcessArrayCreationExpression): Add caution for
	NEGATIVE_ARRAY_SIZE.

2002-02-20  Eric Blake  <ebb9@email.byu.edu>

	* src/ast.h (AstBlock): Add ABRUPT_TRY_FINALLY, to correctly emit
	synchronized blocks in try-finally.
	* src/bytecode.cpp (EmitSynchronizedStatement),